--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             </select>
             
             <select id="psalmSelect">
-                <option value="">-- выбрать --</option>
+                <option value="">Псалом</option>
             </select>
             
             <button onclick="scrollToTop()">В начало</button>
